--- a/20180329-print-CSharp-code/report.tex
+++ b/20180329-print-CSharp-code/report.tex
@@ -14,7 +14,8 @@
   xleftmargin=\parindent,
   language={[Sharp]C},
   breaklines=true, %% Wrap long lines
-  basicstyle=\footnotesize\ttfamily,
+  % basicstyle=\footnotesize\ttfamily,
+  basicstyle=\ttfamily,
   commentstyle=\itshape\color{Gray},
   stringstyle=\color{Black},
   keywordstyle=\bfseries\color{OliveGreen},
